[gd_scene load_steps=5 format=3 uid="uid://bwkdiqnink6vu"]

[ext_resource type="Texture2D" uid="uid://d2wn1nffo57kd" path="res://#1 FlappyBird/Assets/images/pipe/pipe-green.png" id="1_iuof3"]
[ext_resource type="Script" path="res://#1 FlappyBird/Assets/scripts/pipe.gd" id="1_jbnfr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cj7ig"]
size = Vector2(47.5, 316.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cinh0"]
size = Vector2(22, 69)

[node name="Pipe" type="Node2D"]
z_index = 2
script = ExtResource("1_jbnfr")

[node name="AutoDestructionTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Pipe1" type="StaticBody2D" parent="." groups=["pipe"]]
position = Vector2(1, 6)
collision_layer = 4

[node name="Pipe3" type="Sprite2D" parent="Pipe1"]
position = Vector2(-1, -176)
rotation = -3.14159
texture = ExtResource("1_iuof3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pipe1"]
position = Vector2(0, -177.125)
shape = SubResource("RectangleShape2D_cj7ig")

[node name="Pipe2" type="StaticBody2D" parent="." groups=["pipe"]]
position = Vector2(-6, -12)
collision_layer = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Pipe2"]
position = Vector2(7.74999, 240.25)
rotation = -3.14159
shape = SubResource("RectangleShape2D_cj7ig")

[node name="Pipe4" type="Sprite2D" parent="Pipe2"]
position = Vector2(8, 241)
texture = ExtResource("1_iuof3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = 2
position = Vector2(0, 31)
shape = SubResource("RectangleShape2D_cinh0")

[connection signal="timeout" from="AutoDestructionTimer" to="." method="_on_auto_destruction_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
